# repo-kg-construction

./: .gitignore  README.md  pyproject.toml
docs/diagrams/: 7_1_kg_construction.dot
src/kg_construction/: __init__.py  pipeline.py  pipeline_config.py
src/kg_construction/ast/: helpers.py  metadata.py
src/kg_construction/extraction/: context.py  patch.py  validator.py
src/kg_construction/kg/: builder.py  query.py  repo_manager.py  resolver.py  traversal.py  type_inference.py  validator.py
src/kg_construction/llm/: anthropic.py  groq.py  llm_serializer.py
src/kg_construction/validation/: base.py
tests/: test_ambiguous_bare_calls.py  test_calls_based_tests_edge.py  test_context_extractor.py  test_data_flows.py  test_dead_edges_removed.py  test_factory_call_sites.py  test_func_metadata_source.py  test_kg_cache.py  test_llm_serializer.py  test_local_type_hints.py  test_local_types_before_line.py  test_module_depends_on.py  test_multilevel_overrides.py  test_patch_parser.py  test_pipeline_validation.py  test_property_access_edges.py  test_pyright_uses_edges.py  test_repo_manager.py  test_super_call_resolution.py  test_type_inference.py  test_uses_edge_confidence.py  test_validators.py
visualisations/: kg_full_visualization.html
