[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-construction"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
groq = ["groq"]
anthropic = ["anthropic"]
viz = ["pyvis"]
datasets = ["datasets"]
llm = ["kg-construction[groq,anthropic]"]
all = ["kg-construction[llm,viz,datasets]"]

[project.scripts]
kg-run = "kg_construction.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
